# c-iterators

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/include/: iterator.c  iterator.h  linked_list.c  linked_list.h
src/lib/: iterator.c  iterator.h  linked_list.c  linked_list.h
